objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Residential Sales Path</fullName>
        <description>Path with which an AE (Rep) goes through to Close/Win an Oppty</description>
        <isActive>true</isActive>
        <values>
            <fullName>%28Re%29Setting</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Confirming</fullName>
        </values>
        <values>
            <fullName>Financing</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Rep Working</fullName>
        </values>
        <values>
            <fullName>Revisiting</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Disposition__c</fullName>
        <formula>TEXT(Account.Account_Disposition__c)</formula>
        <label>Account Disposition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Stage__c</fullName>
        <label>Confirmation Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirming</fullName>
                    <default>true</default>
                    <label>Confirming</label>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Resetting</fullName>
                </value>
                <value>
                    <fullName>NCY</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Amount_Won__c</fullName>
        <formula>IF(
IsWon = TRUE,
Amount,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Close_Date_Extensions__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of times the Close Date has been extended.</description>
        <inlineHelpText>Number of times the Close Date has been extended.</inlineHelpText>
        <label># Close Date Extensions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Close_Date_Month_Extensions__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of times the Close Date has been extended from one month to another.</description>
        <inlineHelpText>Number of times the Close Date has been extended from one month to another month.</inlineHelpText>
        <label># Close Date Month Extensions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Date_Opportunity_was_Closed__c</fullName>
        <description>Date the Opportunity was actually closed.</description>
        <inlineHelpText>Date the Stage was changed to Closed Won or Lost</inlineHelpText>
        <label>Date Opportunity was Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Days_Open_Delete__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days OpenV1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Days_Open__c</fullName>
        <formula>IF(ISBLANK( DashboardsGSP__Date_Opportunity_was_Closed__c ),
NOW() - CreatedDate,
DashboardsGSP__Date_Opportunity_was_Closed__c - DATEVALUE(CreatedDate)
)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Includes the day the Opportunity was opened.</inlineHelpText>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Days_Since_Last_Stage_Change__c</fullName>
        <description>Number of days since the last change in Opportunity Stage.</description>
        <formula>IF(ISBLANK(DashboardsGSP__Date_Opportunity_was_Closed__c),
TODAY()-DashboardsGSP__Last_Stage_Change_Date__c,
DashboardsGSP__Date_Opportunity_was_Closed__c - DashboardsGSP__Last_Stage_Change_Date__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days since the Opportunity Stage was last changed.</inlineHelpText>
        <label>Days Since Last Stage Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Last_Stage_Change_Date__c</fullName>
        <label>Last Stage Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Stage__c</fullName>
        <label>Finance Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Unapproved</fullName>
                </value>
                <value>
                    <fullName>Financing</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved &amp; Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finance_Type__c</fullName>
        <label>Finance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nebraska Energy Loan</fullName>
                </value>
                <value>
                    <fullName>Zero Percent Card</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Other Financing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DNC</fullName>
                </value>
                <value>
                    <fullName>Purchased Elsewhere</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
                <value>
                    <fullName>Out of Territory</fullName>
                </value>
                <value>
                    <fullName>New Windows</fullName>
                </value>
                <value>
                    <fullName>Competitor Preference</fullName>
                </value>
                <value>
                    <fullName>Moving</fullName>
                </value>
                <value>
                    <fullName>Renter</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Step_Date__c</fullName>
        <label>Next Step Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Visit</label>
        <referenceTo>Visit</referenceTo>
        <relationshipLabel>Opportunity</relationshipLabel>
        <relationshipName>Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Disposition__c</fullName>
        <label>Opportunity Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Interest / Unqualified</fullName>
                </value>
                <value>
                    <fullName>Call Back</fullName>
                </value>
                <value>
                    <fullName>Needs Rehash</fullName>
                </value>
                <value>
                    <fullName>Call To (Re)Set</fullName>
                </value>
                <value>
                    <fullName>Set Appointment</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Rep_Working</fullName>
                    <label>Rep Working</label>
                </value>
                <value>
                    <fullName>Get Back Scheduled</fullName>
                </value>
                <value>
                    <fullName>Closed / Finance</fullName>
                </value>
                <value>
                    <fullName>Closed / Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>RetailStore</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>companycam__AccountCity__c</fullName>
        <formula>Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>companycam__AccountPostalCode__c</fullName>
        <formula>Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>companycam__AccountState__c</fullName>
        <formula>Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>companycam__AccountStreet__c</fullName>
        <formula>Account.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>companycam__ProjectID__c</fullName>
        <label>CompanyCam Project ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fmlOpportunity_Name__c</fullName>
        <formula>Account.Primary_Contact__r.LastName + &quot;, &quot; + Account.Primary_Contact__r.FirstName +
 IF(
NOT(ISBLANK( Account.Secondary_Contact__r.FirstName ))
 ,IF(Account.Secondary_Contact__r.LastName = Account.Primary_Contact__r.LastName , &quot; &amp; &quot; + Account.Secondary_Contact__r.FirstName, &quot; &amp; &quot; + Account.Secondary_Contact__r.LastName + &quot;, &quot; + Account.Secondary_Contact__r.FirstName)
 ,NULL) +
IF(NOT(ISBLANK(  Property__r.Name  )), &quot; - &quot; + Property__r.Name, &quot; - &quot; + &quot;(Address Missing)&quot;) +
&quot; - &quot; + TEXT(MONTH(CloseDate)) + &quot;/&quot; + 
TEXT(DAY(CloseDate)) + &quot;/&quot; + TEXT(YEAR(CloseDate))</formula>
        <label>fmlOpportunity Name</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Opportunity_Disposition__c</columns>
        <columns>Confirmation_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Confirming</value>
        </filters>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Team</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Finance_Deals</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>SalesTeam</filterScope>
        <filters>
            <field>Finance_Stage__c</field>
            <operation>equals</operation>
            <value>Canceled,Financing,Unapproved,Approved,Approved &amp; Paid</value>
        </filters>
        <label>My Finance Deals</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>SalesTeam</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USERS.FULL_NAME</field>
            <operation>contains</operation>
            <value>Jamie</value>
        </filters>
        <label>Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>TodaysConfirmationList</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Confirming</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterThan</operation>
            <value>11/3/2023</value>
        </filters>
        <label>Today&apos;s Confirmation List</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Residential</fullName>
        <active>true</active>
        <businessProcess>Residential Sales Path</businessProcess>
        <description>Used to Progress Residential Sales</description>
        <label>Residential</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>